2005-05-17 Ian Rutt
 * Added test example for energy-balance mass-balance scheme

2005-05-16 Ian Rutt
 * Removed dummy code glimmer_enmabal.f90
 * Merged in changes to allow use of RAPID energy-balance mass-balance
 model (not released yet). These are activated using the --with-enmabal
 flag in configure. 

2005-05-13 Magnus Hagdorn
 * glide_velo.f90: simplify API of calcbtrc, add sliding param depending on basal melt;
   simplify API of slipvelo
 * glide_thck.f90: hook-up new slipvelo
 * glide.f90: hook-up new slipvelo; write glimmer version to log
 * glide_types.f90: add new params to deal with new sliding parameterisation
 * glide_setup.f90: read new params for configuration file
 * tests/Makefile.am: tell make which files to delete on make clean

2005-05-13 Magnus Hagdorn
 * cvs_version.py: script used to parse CVS/Entries file to get date and branch of
   the most recently checked-out file
 * glimmer_version.f90.in renamed to glimmer_version.f90.in.in
 * Makefile.am generates glimmer_version.f90 from glimmer_version.f90.in using cvs_version.py
 * configure.in: add CVS date to version string if we compile from CVS sources

2005-05-11 Ian Rutt
 * configure.in: added rule to enable preprocessor in gfortran. Note that
 gfortran can't actually compile glimmer at the moment, but hopefully will
 be able to one day.
	
2005-04-22 Magnus Hagdorn
 * glimmer_ncio.f90: add sanity checking to make sure input netCDF file have the same
   grid size as the one specified in config file
 * glimmer_ts.f90: fail gracefully when the input file cannot be opened

2005-04-18 Magnus Hagdorn
 * configure.in: bump version to 0.5.2
 * definitions.tex: changed doc date to today
 * make_doc.rules: fix problem with dia where fonts are tiny
 * updated NEWS

2005-04-15 Magnus Hagdorn
 * glide.tex: added documentation for isostasy

2005-04-12 Ian Rutt
 * Added optional command-line interface to glint_example.f90. Uses
   non-standard Fortran extensions in the intel compiler - can be